Fix mobile content alignment; Add override parameter

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ body {
 }
 .site-wrapper-inner {
     display: table-cell;
-    vertical-align: top;
+    vertical-align: middle;
 }
 .cover-container {
     margin-right: auto;
